# Pde-Cpp

./: CMakeLists.txt
include/algebra/: Algebra_kernel.h  Matrix.h  Vector.h  linalg.h
learncpp/: a.out  point_delete.cpp  struct_case1.cpp  students.hpp  teacher.hpp  test.cpp
test/: 3d_plot.cpp  CMakeLists.txt  Cholesky.cpp  LU.cpp  a.out  animation.cpp  base_son.cpp  chatgptcode.cpp  cmp.cpp  fem_pde.cpp  hello.cpp  householder.cpp  lsqr.cpp  out-file-date.cpp  qrgivens.cpp  qrhouse.cpp  qrmsg.cpp  test.cpp
