add_executable(test test.cpp)
target_include_directories(test PRIVATE ${PYTHON_INCLUDE_DIRS})
target_link_libraries(test ${PYTHON_LIBRARIES})

add_executable(animation animation.cpp)
target_include_directories(animation PRIVATE ${PYTHON_INCLUDE_DIRS})
target_link_libraries(animation ${PYTHON_LIBRARIES})

add_executable(3d_plot 3d_plot.cpp)
target_include_directories(3d_plot PRIVATE ${PYTHON_INCLUDE_DIRS})
target_link_libraries(3d_plot ${PYTHON_LIBRARIES})

add_executable(fem_pde fem_pde.cpp)
target_include_directories(fem_pde PRIVATE ${PYTHON_INCLUDE_DIRS})
target_link_libraries(fem_pde ${PYTHON_LIBRARIES})

add_executable(LU LU.cpp)
add_executable(Cholesky Cholesky.cpp)
add_executable(base_son base_son.cpp)
add_executable(cmp cmp.cpp)
add_executable(hello hello.cpp)
add_executable(qrmsg qrmsg.cpp)
add_executable(qrhouse qrhouse.cpp)
add_executable(householder householder.cpp)
add_executable(qrgivens qrgivens.cpp)
add_executable(lsqr lsqr.cpp)
